--- a/templates/backend/index.html.twig
+++ b/templates/backend/index.html.twig
@@ -5,6 +5,13 @@
 {% block body %}
  <div class="content-wrapper">
     <div class="container-fluid">
+    <!-- Breadcrumbs-->
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#">Dashboard</a>
+        </li>
+        <li class="breadcrumb-item active">My Dashboard</li>
+      </ol>
     </div>
 </div>
 {% endblock %}
