--- a/templates/backend/index.html.twig
+++ b/templates/backend/index.html.twig
@@ -3,15 +3,13 @@
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
- <div class="content-wrapper">
-    <div class="container-fluid">
+
     <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <a href="#">Dashboard</a>
         </li>
-        <li class="breadcrumb-item active">My Dashboard</li>
+        <li class="breadcrumb-item active">{{ tag }}</li>
       </ol>
-    </div>
-</div>
+ 
 {% endblock %}
