--- a/templates/inc/back-nav.html.twig
+++ b/templates/inc/back-nav.html.twig
@@ -1,24 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="/">Madexe Dashboard</a>
+    <a class="navbar-brand" href="/backend">Madexe Dashboard</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <a class="nav-link" href="index.html">
+          <a class="nav-link" href="/backend">
             <i class="fa fa-fw fa-dashboard"></i>
             <span class="nav-link-text">Dashboard</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Projects">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/backend/project">
             <i class="fa fa-fw fa-area-chart"></i>
             <span class="nav-link-text">Projects</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Experiences">
-          <a class="nav-link" href="">
+          <a class="nav-link" href="/backend/experience">
             <i class="fa fa-fw fa-table"></i>
             <span class="nav-link-text">Experiences</span>
           </a>
@@ -31,21 +31,21 @@
           </a>
           <ul class="sidenav-second-level collapse" id="collapseComponents">
             <li>
-              <a href="">About</a>
+              <a href="/backend/about">About</a>
             </li>
             <li>
-              <a href="">Formations</a>
+              <a href="/backend/formations">Formations</a>
             </li>
           </ul>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Contact">
-          <a class="nav-link" href="">
+          <a class="nav-link" href="/backend/contact">
             <i class="fa fa-fw fa-table"></i>
             <span class="nav-link-text">Contact</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/backend/link">
             <i class="fa fa-fw fa-link"></i>
             <span class="nav-link-text">Link</span>
           </a>
