--- a/templates/backend/project/_form.html.twig
+++ b/templates/backend/project/_form.html.twig
@@ -1,4 +1,6 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {attr: {class: 'form-group'} }) }}
+     {{ form_widget(form) }}
+    <br>
+
+    <button  class="btn btn-primary">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
