--- a/templates/backend/project/edit.html.twig
+++ b/templates/backend/project/edit.html.twig
@@ -1,13 +1,32 @@
-{% extends 'base.html.twig' %}
+{% extends 'back-base.html.twig' %}
 
 {% block title %}Edit Project{% endblock %}
 
 {% block body %}
-    <h1>Edit Project</h1>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="/backend">Dashboard</a>
+        </li>
+        <li class="breadcrumb-item">
+          <a href="/backend/project">Project</a>
+        </li>
+        <li class="breadcrumb-item active">{{ tag }}</li>
+    </ol>
+    <h1 class="bd-title">Edit Project</h1>
 
     {{ include('project/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('project_index') }}">back to list</a>
 
     {{ include('project/_delete_form.html.twig') }}
+{% endblock %}
+{% block javascripts %}
+<script>
+    $(document).ready(function() {
+        // you may need to change this code if you are not using Bootstrap Datepicker
+        $('.js-datepicker').datepicker({
+            format: 'yyyy-mm-dd'
+        });
+    });
+</script>
 {% endblock %}
