--- a/templates/backend/project/new.html.twig
+++ b/templates/backend/project/new.html.twig
@@ -1,11 +1,30 @@
-{% extends 'base.html.twig' %}
+{% extends 'back-base.html.twig' %}
 
 {% block title %}New Project{% endblock %}
 
 {% block body %}
-    <h1>Create new Project</h1>
-
-    {{ include('backend/project/_form.html.twig') }}
-
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="/backend">Dashboard</a>
+        </li>
+        <li class="breadcrumb-item">
+          <a href="/backend/project">Project</a>
+        </li>
+        <li class="breadcrumb-item active">{{ tag }}</li>
+    </ol>
+    <h1 class="bd-title">Create new Project</h1>
+    <div class="bd-exemple">
+      {{ include('backend/project/_form.html.twig') }}
+    </div>
     <a href="{{ path('project_index') }}">back to list</a>
+{% endblock %}
+{% block javascripts %}
+<script>
+    $(document).ready(function() {
+        // you may need to change this code if you are not using Bootstrap Datepicker
+        $('.js-datepicker').datepicker({
+            format: 'yyyy-mm-dd'
+        });
+    });
+</script>
 {% endblock %}
